
    - There's a new subcommand ~mu init~ to initialize the mu database, which
      takes the ~--maildir~ and ~--my-address~ parameters that ~index~ used to take.
      These parameters are persistent so ~index~ does not need (or accept) them
      anymore. ~mu4e~ now depends on those parameters.

      ~init~ only needs to be run once or when changing these parameters. That
      implies that you need to re-index after changing these parameters.

    - There is another new subcommand ~mu info~ to get information about the mu
      database, the personal addresses etc.

    - The contacts cache (which is used by ~mu cfind~ and ~mu4e~'s
      contact-completion) is now stored as part of the Xapian database rather
      than as a separate file.

    - The ~--xbatchsize~ and ~--autoupgrade~ options for indexing are gone; both are
      determined implicitly now.

*** mu4e

    - ~mu4e~ no longer uses the ~mu4e-maildir~ and ~mu4e-user-mail-address-list~
      variables; instead it uses the information it gets from ~mu~ (see the ~mu~
      section above). If you have a non-default ~mu4e-mu-home~, make sure to set
      it before ~mu4e~ starts.

      It is strongly recommended that you run ~mu init~ with the appropriate
      parameters to (re)initialize the Xapian database, as mentioned in the
      mu-section above.

      The main screen shows your address(es), and issues a warning if
      ~user-email-address~ is not part of that (and refer you to ~mu init~). You can
      avoid the addresses in the main screen and the warning by setting
      ~mu4e-main-view-hide-addresses~ to non-nil.

    - In many cases, ~mu4e~ used to receive /all/ contacts after each indexing
      operation; this was slow for some users, so we have updated this to /only/
      get the contacts that have changed since the last round.

      We also moved sorting the contacts to the mu-side, which speeds things up